# brave-core

./: DEPS  package-lock.json  package.json
app/: brave_generated_resources.grd
app/mac/: BUILD.gn
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_tab_helpers.cc
browser/greaselion/: greaselion_browsertest.cc  greaselion_service_factory.cc  greaselion_tab_helper.cc  greaselion_tab_helper.h
browser/ui/webui/: brave_tip_ui.cc  brave_webui_source.cc
common/: BUILD.gn  brave_switches.cc  brave_switches.h  pref_names.cc  pref_names.h
components/brave_rewards/browser/: rewards_service_browsertest.cc
components/brave_shields/browser/: BUILD.gn  ad_block_base_service.cc  ad_block_base_service.h  ad_block_regional_service.cc
components/brave_welcome_ui/actions/: welcome_actions.ts
components/brave_welcome_ui/components/: app.tsx
components/brave_welcome_ui/reducers/: index.ts  search_reducer.ts  welcome_reducer.ts
components/definitions/: welcome.d.ts
components/greaselion/browser/: BUILD.gn  greaselion_download_service.cc  greaselion_download_service.h  greaselion_service.h  greaselion_service_impl.cc  greaselion_service_impl.h
components/resources/: brave_components_strings.grd
components/test/: testData.ts
patches/: chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-java-src-org-chromium-chrome-browser-firstrun-FirstRunFlowSequencer.java.patch  chrome-android-java-src-org-chromium-chrome-browser-init-ChromeBrowserInitializer.java.patch  chrome-installer-mini_installer-BUILD.gn.patch
test/: BUILD.gn
(+8 files in other folders)
